[Modified] sign-in style

--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,17 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=M+PLUS+1:wght@100;200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" rel="stylesheet" type="text/css" /> -->
+
     <title>인스타그램</title>
     <style>
       html,
@@ -17,7 +28,7 @@
       body {
         font-size: 15px;
         line-height: 1.46668;
-        font-weight: 400;
+        font-family: 'M PLUS 1', 'Noto Sans KR', 'sans-serif';
         font-variant-ligatures: common-ligatures;
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
