--- a/front/index.html
+++ b/front/index.html
@@ -38,6 +38,13 @@
         margin: 0;
         padding: 0;
       }
+      a:link {
+        color: #000;
+        text-decoration: none;
+      }
+      a:visited {
+        color: #000;
+      }
     </style>
   </head>
   <body>
