[Add] Portal Component & Small Modal

--- a/front/index.html
+++ b/front/index.html
@@ -49,6 +49,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="modal"></div>
     <script src="/dist/app.js"></script>
   </body>
 </html>
