--- a/front/index.html
+++ b/front/index.html
@@ -49,7 +49,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <div id="modal"></div>
+    <div id="smallModal"></div>
+    <div id="fullModal"></div>
     <script src="/dist/app.js"></script>
   </body>
 </html>
