--- a/front/index.html
+++ b/front/index.html
@@ -23,6 +23,7 @@
       body {
         margin: 0;
         padding: 0;
+        /* min-width: 600px; */
         overflow: initial !important;
       }
       body {
